# video-pipeline

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-generation-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: README.md  migrate_audio.sql  migrate_phase10.sql  migrate_phase12.sql  migrate_video_manifest.sql  requirements.txt
backend/tests/: test_ollama_storyboard_e2e.py
backend/vidpipe/: __init__.py  config.py
docs/: pipe-svn.md  spec.md  storyboard-spec.md  v2-manifest.md  v2-pipe-optimization.md
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
vidpipe/: __init__.py  __main__.py  config.py
vidpipe/api/: __init__.py  app.py
vidpipe/db/: __init__.py  models.py
vidpipe/orchestrator/: __init__.py  state.py
vidpipe/pipeline/: __init__.py  keyframes.py  stitcher.py  storyboard.py  video_gen.py
vidpipe/schemas/: storyboard.py
vidpipe/services/: file_manager.py  vertex_client.py
(+169 files in other folders)
